<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Matches" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_teams"
        android:title="Teams" />

    <item
        android:id="@+id/navigation_favorit"
        android:icon="@drawable/ic_favorites"
        android:title="Favorites" />

    

</menu>
