<resources>
    <string name="app_name">EPLMatch</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav">NavActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <array name="leagueArray">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="league">
        <item>
            <name>English Premier League</name>
            <code>4328</code>
        </item>
        <item>
            <name>English League Championship</name>
            <code>4328</code>
        </item>

        <item>
            <name>German Bundesliga</name>
            <code>4328</code>
        </item>
        <item>
            <name>Italian Serie A</name>
            <code>4328</code>
        </item>
        <item>
            <name>French Ligue 1</name>
            <code>4328</code>
        </item>
        <item>
            <name>Spanish La Liga</name>
            <code>4328</code>
        </item>

    </array>
    <string name="title_activity_detail_club">DetailClubActivity</string>
</resources>
